--- a/docs/学习/其他.md
+++ b/docs/学习/其他.md
@@ -10,3 +10,13 @@
 - 合同协议
 - 行业资料
 :::
+
+### 302edu
+
+[https://www.302edu.com/textbooks/index](https://www.302edu.com/textbooks/index)
+
+- 课本
+- 课件
+- 教案
+- 试卷
+- 图书
