--- a/docs/电子书/检索下载.md
+++ b/docs/电子书/检索下载.md
@@ -51,3 +51,12 @@
 
 [https://pansoso.com/](https://pansoso.com/)
 
+### allitebooks
+
+[http://www.allitebooks.com/](http://www.allitebooks.com/)
+
+IT类原版技术书籍下载站
+
+### pdfdrive
+
+[https://www.pdfdrive.com/](https://www.pdfdrive.com/)
